--- a/app/src/main/res/layout/profilepaginahelenjewet.xml
+++ b/app/src/main/res/layout/profilepaginahelenjewet.xml
@@ -236,7 +236,8 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
                 android:orientation="horizontal"
-                android:layout_marginStart="70dp">
+                android:layout_marginStart="70dp"
+                android:layout_marginBottom="80dp">
 
                 <EditText
                     android:id="@+id/editTextinsta"
