--- a/app/src/main/res/layout/discovery.xml
+++ b/app/src/main/res/layout/discovery.xml
@@ -112,13 +112,16 @@
 
     <ImageButton
         android:id="@+id/imageButton"
-        android:contentDescription="back button"
         android:layout_width="58dp"
         android:layout_height="58dp"
-        android:scaleType="fitCenter"
-        android:layout_margin="14dp"
+        android:layout_marginStart="14dp"
+        android:layout_marginTop="14dp"
+        android:layout_marginEnd="14dp"
+        android:layout_marginBottom="14dp"
         android:background="@android:color/transparent"
-        android:src="@drawable/return_button"
-        android:onClick="onBackButtonClicked"/>
+        android:contentDescription="back button"
+        android:onClick="onBackButtonClicked"
+        android:scaleType="fitCenter"
+        android:src="@drawable/return_button" />
 
 </RelativeLayout>
