--- a/app/src/main/res/layout/profilepageheadsouth.xml
+++ b/app/src/main/res/layout/profilepageheadsouth.xml
@@ -246,6 +246,7 @@
                         android:layout_marginStart="165dp"
                         android:layout_marginTop="16dp"
                         android:layout_marginEnd="16dp"
+                        android:layout_marginBottom="80dp"
                         android:background="@drawable/circle_background"
                         android:drawableStart="@drawable/instagram_fill"
                         android:drawablePadding="20dp"
