--- a/app/src/main/res/layout/registreerpagina.xml
+++ b/app/src/main/res/layout/registreerpagina.xml
@@ -171,7 +171,25 @@
             android:text="Venue"
             android:textColor="#000000"
             android:textSize="15sp" />
+
+
     </LinearLayout>
+
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="58dp"
+        android:layout_height="58dp"
+        android:background="@android:color/transparent"
+        android:contentDescription="back button"
+        android:onClick="onBackButtonClicked"
+        android:scaleType="fitCenter"
+        android:src="@drawable/return_button"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.0" />
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
