--- a/app/src/main/res/layout/organisation_liked_page.xml
+++ b/app/src/main/res/layout/organisation_liked_page.xml
@@ -34,14 +34,32 @@
             android:layout_height="wrap_content"
             android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
+            <LinearLayout
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:text="Bar Mash"
-                android:textSize="24sp"
-                android:gravity="center" />
+                android:layout_height="match_parent">
+                <ImageButton
+                    android:id="@+id/btnReturn"
+                    android:contentDescription="back button"
+                    android:layout_width="48dp"
+                    android:layout_height="48dp"
+                    android:scaleType="fitCenter"
+                    android:layout_margin="4dp"
+                    android:background="#93BADD"
+                    android:src="@drawable/return_button"
+                    android:onClick="onBackButtonClicked"/>
+
+
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:layout_marginTop="15dp"
+                    android:layout_marginStart="100dp"
+                    android:gravity="center"
+                    android:text="Bar Mash"
+                    android:textSize="24sp" />
+            </LinearLayout>
+
             <TextView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
