--- a/app/src/main/res/layout/homepageartists.xml
+++ b/app/src/main/res/layout/homepageartists.xml
@@ -185,6 +185,7 @@
                 </androidx.cardview.widget.CardView>
 
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/card2"
                     android:layout_width="match_parent"
                     android:layout_height="180dp"
                     android:layout_marginTop="20dp"
@@ -264,6 +265,7 @@
 
                 </androidx.cardview.widget.CardView>
                 <androidx.cardview.widget.CardView
+                    android:id="@+id/card3"
                     android:layout_width="match_parent"
                     android:layout_height="190dp"
                     android:layout_marginTop="20dp"
