--- a/app/src/main/res/layout/organisation_gig_info.xml
+++ b/app/src/main/res/layout/organisation_gig_info.xml
@@ -29,27 +29,27 @@
                     android:layout_height="wrap_content"
                     android:orientation="horizontal">
 
+                    <ImageView
+                        android:id="@+id/uitlog"
+                        android:layout_width="48dp"
+                        android:layout_height="48dp"
+                        android:layout_gravity="start|top"
+                        android:src="@drawable/uitlog"
+                        android:layout_marginStart="12dp"
+                        android:layout_marginTop="8dp"/>
 
-                    <TextView
+
+                    <EditText
                         android:id="@+id/textView"
                         android:layout_width="200dp"
                         android:layout_height="wrap_content"
                         android:layout_below="@id/videoView"
                         android:layout_marginTop="16dp"
-                        android:layout_marginStart="110dp"
+                        android:layout_marginStart="50dp"
                         android:text="Rockers gezocht voor Bar Mash!"
                         android:textSize="24sp"
                         android:gravity="center"
                         android:textStyle="bold"                />
-
-                    <ImageView
-                        android:layout_width="30dp"
-                        android:layout_height="30dp"
-                        android:layout_gravity="end|top"
-                        android:src="@drawable/editprofile"
-                        android:layout_marginEnd="12dp"
-                        android:layout_marginTop="8dp"
-                        android:layout_marginStart="50dp"/>
 
                 </LinearLayout>
 
@@ -69,7 +69,7 @@
                     android:src="@drawable/barmashlogo" />
 
                 <Button
-                    android:id="@+id/secondButton"
+                    android:id="@+id/goChatOverview"
                     android:layout_width="250dp"
                     android:layout_height="match_parent"
                     android:layout_below="@id/iconImageView"
@@ -147,6 +147,7 @@
                     android:layout_marginTop="15dp"
                     android:layout_marginStart="16dp"
                     android:layout_marginEnd="16dp"
+                    android:layout_marginBottom="75dp"
                     app:cardBackgroundColor="@android:color/white"
                     app:cardElevation="2dp"
                     app:cardCornerRadius="16dp">
