--- a/app/src/main/res/layout/organisation_gig_own.xml
+++ b/app/src/main/res/layout/organisation_gig_own.xml
@@ -31,13 +31,6 @@
         android:orientation="horizontal"
         android:layout_alignParentTop="true">
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="start|top"
-            android:src="@drawable/uitlog"
-            android:layout_marginStart="12dp"
-            android:layout_marginTop="8dp"/>
 
         <EditText
             android:layout_width="0dp"
@@ -46,16 +39,9 @@
             android:layout_marginStart="12dp"
             android:layout_marginEnd="12dp"
             android:layout_gravity="center|top"
-            android:text="                       Bar Mash"
+            android:text="                                Bar Mash"
             android:layout_marginTop="8dp"/>
 
-        <ImageView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="end|top"
-            android:src="@drawable/editprofile"
-            android:layout_marginEnd="12dp"
-            android:layout_marginTop="8dp" />
 
     </LinearLayout>
 
@@ -135,7 +121,7 @@
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="1dp"
                             android:backgroundTint="#93BADD"
-                            android:text="Chat"
+                            android:text="Bekijk event"
                             android:textColor="#000000" />
                         <Button
                             android:id="@+id/btnApplyOne"
@@ -220,7 +206,7 @@
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="1dp"
                             android:backgroundTint="#93BADD"
-                            android:text="Chat"
+                            android:text="Bekijk event"
                             android:textColor="#000000" />
 
                         <Button
@@ -301,7 +287,7 @@
                             android:layout_below="@id/logoBarThree"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="1dp"
-                            android:text="Chat"
+                            android:text="Bekijk event"
                             android:backgroundTint="#93BADD"
                             android:textColor="#000000"/>
                         <Button
@@ -382,7 +368,7 @@
                             android:layout_below="@id/iconImageView"
                             android:layout_marginStart="20dp"
                             android:layout_marginTop="1dp"
-                            android:text="Chat"
+                            android:text="Bekijk event"
                             android:backgroundTint="#93BADD"
                             android:textColor="#000000"/>
                         <Button
