--- a/app/src/main/res/layout/registreerpagina.xml
+++ b/app/src/main/res/layout/registreerpagina.xml
@@ -163,6 +163,7 @@
 
 
         <Button
+            android:id="@+id/btn_venue_account_create"
             android:layout_width="140dp"
             android:layout_height="48dp"
             android:layout_gravity="start"
